--- a/players.html
+++ b/players.html
@@ -4,28 +4,28 @@ title: Players
 image: /assets/img/logo-2.png
 ---
 
-<div class="container-fluid px-0 bg-dark text-white">
+<div class="container-fluid px-0 bg-light">
   <div class="row row-cols-2 row-cols-md-3 g-0">
-    {% assign roles = site.data.players | group_by:"role" %}
-    {% for role in roles %}
-      <h1 class="d-block w-100 pt-5 text-uppercase text-center fw-bold">{{ role.name }}</h1>
-      {% for player in role.items %}
+  {% assign roles = site.data.players | group_by:"role" %}
+  {% for role in roles %}
+    <h1 class="d-block w-100 pt-5 text-uppercase text-center fw-bold">{{ role.name }}</h1>
+    {% for player in role.items %}
     <div class="col">
-      <div class="card rounded-0 h-100 bg-dark text-white border-white">
+      <div class="card rounded-0 h-100 bg-dark">
         {% if player.pp %}
-          <img src="{{ player.pp }}" class="rounded-0">
+        <img src="{{ player.pp }}" class="rounded-0">
           {% else %}
           <img src="/assets/img/pp/default-pp.jpg" class="rounded-0">
         {% endif %}
         <div class="card-body">
           <h5 class="card-title text-center text-capitalize">
-            {% if player.profile-link %}<a href="{{ player.profile-link }}" class="stretched-link link-light text-decoration-none">{{ player.name }}</a>{% else %}{{ player.name }}{% endif %}
+            {% if player.profile-link %}<a href="{{ player.profile-link }}" class="stretched-link link-dark text-decoration-none">{{ player.name }}</a>{% else %}{{ player.name }}{% endif %}
           </h5>
           <p class="card-text text-center fs-1 fw-bold">{{ player.no-punggung }}</p>
         </div>
       </div>
     </div>
-       {% endfor %}
     {% endfor %}
+  {% endfor %}
   </div>
 </div>
