--- a/players.html
+++ b/players.html
@@ -4,8 +4,8 @@ title: Players
 image: /assets/img/logo-2.png
 ---
 
-<div class="container-fluid px-0 bg-light">
-  <div class="row row-cols-2 row-cols-md-3 g-0">
+<div class="container px-0 bg-light">
+  <div class="row row-cols-2 row-cols-md-3 g-2">
   {% assign roles = site.data.players | group_by:"role" %}
   {% for role in roles %}
     <h1 class="d-block w-100 pt-5 text-uppercase text-center fw-bold">{{ role.name }}</h1>
@@ -18,9 +18,9 @@ image: /assets/img/logo-2.png
           <img src="/assets/img/pp/default-pp.jpg" class="rounded-0">
         {% endif %}
         <div class="card-body">
-          <h5 class="card-title text-center text-capitalize">
+          <h6 class="card-title text-center text-capitalize">
             {% if player.profile-link %}<a href="{{ player.profile-link }}" class="stretched-link link-dark text-decoration-none">{{ player.name }}</a>{% else %}{{ player.name }}{% endif %}
-          </h5>
+          </h6>
           <p class="card-text text-center fs-1 fw-bold">{{ player.no-punggung }}</p>
         </div>
       </div>
