--- a/matches.html
+++ b/matches.html
@@ -12,11 +12,11 @@ image: /assets/img/logo-1.png
       <h1 class="d-block w-100 pt-5 text-uppercase text-center fw-bold">{{ match.name }}</h1>
       {% for item in match.items %}
       <div class="col">
-        <div class="card rounded-0 border-0 shadow-sm mb-2">
+        <div class="card rounded-0 border-0 shadow-sm mb-3">
           <div class="card-body py-5">
             <p class="card-text text-center fw-bolder"><span class="text-uppercase">{{ item.type }}</span> • <span class="text-capitalize">{{ item.competition }}</span></p>
             <p class="card-text text-center text-capitalize text-secondary"><small>{{ item.date | date: "%d %B %Y • %R" | append: " WIB" }}</small></p>
-            <div class="row row-cols-3 text-center text-uppercase fw-bolder my-5 py-5">
+            <div class="row row-cols-3 text-center text-uppercase fw-bolder py-5">
               <div class="col fs-6">{{ item.home }}</div>
               {% if item.status == "done" %}
               <div class="col fs-1">{{ item.result }}</div>
