--- a/matches.html
+++ b/matches.html
@@ -8,9 +8,9 @@ image: /assets/img/logo-1.png
   <div class="container-sm">
     {% assign matches = site.matches | group_by: "status" %}
     <div class="row row-cols-1 g-2">
-      {% for match in matches %}
+      {% for match in matches reversed %}
       <h1 class="d-block w-100 pt-5 text-uppercase text-center fw-bold">{{ match.name }}</h1>
-      {% for item in match.items %}
+      {% for item in match.items reversed %}
       <div class="col">
         <div class="card rounded-0 border-0 shadow-sm mb-2">
           <div class="card-body py-5">
