--- a/matches.html
+++ b/matches.html
@@ -16,7 +16,7 @@ image: https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSnZu-OnLFArcJLRGYkE
         <div class="card rounded-0 border-0 shadow-sm mb-2">
           <div class="card-body py-5">
             <p class="card-text text-center fw-bolder mb-0"><span class="text-uppercase">{{ item.type }}</span> • <span class="text-uppercase">{{ item.competition }}</span></p>
-            <p class="card-text text-center text-capitalize text-secondary"><small class="text-uppercase">{{ item.date | date: "%A %d %B %Y • %R" | append: " WIB" }}</small></p>
+            <p class="card-text text-center text-capitalize text-secondary"><small class="text-uppercase">{{ item.date | date: "%A, %d %B %Y • %R" | append: " WIB" }}</small></p>
             <div class="row row-cols-3 text-center text-uppercase fw-bolder py-5">
               <div class="col fs-6">{{ item.home.name }}</div>
               {% if item.status == "last match" %}
@@ -26,7 +26,11 @@ image: https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSnZu-OnLFArcJLRGYkE
               {% endif %}
               <div class="col fs-6">{{ item.away.name }}</div>
             </div>
-            <p class="card-text text-center text-capitalize text-secondary"><small>{{ item.place }}</small></p>
+            <p class="card-text text-center text-capitalize text-secondary">
+              <small>
+                <a href="{{ item.url }}" class="stretched-link link-dark text-decoration-none">{{ item.place }}</a>
+              </small>
+            </p>
           </div>
         </div>
         {% endfor %}
