--- a/matches.html
+++ b/matches.html
@@ -14,19 +14,19 @@ image: https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTY3CfEcpam9s-Avlbpc
       {% for item in match.items reversed %}
       <div class="col">
         <div class="card rounded-0 border-0 shadow-sm mb-2">
-          <div class="card-body py-3">
+          <div class="card-body py-2">
             <p class="card-text text-center fw-bolder mb-0"><small class="text-uppercase">{{ item.type }}</small> • <small class="text-uppercase">{{ item.competition }}</small></p>
             <p class="card-text text-center text-capitalize text-secondary"><small class="text-uppercase">{{ item.kickoff }}</small></p>
-            <div class="row row-cols-3 text-center text-uppercase fw-bolder py-5">
-              <div class="col fs-6">{{ item.home.name }}</div>
+            <div class="row row-cols-5 text-uppercase">
+              <div class="col"><small>{{ item.home.name }}</small></div>
               <div class="col"><img src="{% if item.home.logo %}{{ item.home.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="border-0" width="35" height="35"></div>
               {% if item.status == "last match" %}
               <div class="col fs-6">{{ item.result }}</div>
                 {% else %}
               <div class="col fs-6">vs</div>
               {% endif %}
-              <div class="col"><img src="{% if item.home.logo %}{{ item.home.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="border-0" width="35" height="35"></div>
-              <div class="col fs-6">{{ item.away.name }}</div>
+              <div class="col"><img src="{% if item.away.logo %}{{ item.away.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="border-0" width="35" height="35"></div>
+              <div class="col"><small>{{ item.away.name }}</small></div>
             </div>
             <p class="card-text text-center text-capitalize">
               <small>
