--- a/matches.html
+++ b/matches.html
@@ -21,16 +21,16 @@ image: https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTY3CfEcpam9s-Avlbpc
               <div class="col-auto"><small>{{ item.home.name }}</small></div>
               <div class="col-2"><img src="{% if item.home.logo %}{{ item.home.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="border-0" width="35" height="35"></div>
               {% if item.status == "last match" %}
-              <div class="col-1 fw-bolder">{{ item.result }}</div>
+              <div class="col-1 fw-bolder mx-auto">{{ item.result }}</div>
                 {% else %}
-              <div class="col-1 fw-bolder">vs</div>
+              <div class="col-1 fw-bolder mx-auto">vs</div>
               {% endif %}
               <div class="col-2 "><img src="{% if item.away.logo %}{{ item.away.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="border-0" width="35" height="35"></div>
               <div class="col-auto"><small>{{ item.away.name }}</small></div>
             </div>
             <p class="card-text text-center text-capitalize">
               <small>
-                <a href="{{ item.url }}" class="stretched-link link-black text-decoration-none">{{ item.place }}</a>
+                <a href="{{ item.url }}" class="stretched-link link-dark text-decoration-none">{{ item.place }}</a>
               </small>
             </p>
           </div>
