--- a/matches.html
+++ b/matches.html
@@ -21,7 +21,7 @@ image: https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTY3CfEcpam9s-Avlbpc
               <div class="col-3"><small class="lh-1 text-end fw-bolder">{{ item.home.name }}</small></div>
               <div class="col-2"><img src="{% if item.home.logo %}{{ item.home.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="border-0" width="35" height="35"></div>
               {% if item.status == "last match" %}
-              <div class="col-2 fw-bolder">{{ item.result }}</div>
+              <div class="col-2 fw-bolder">{{ item.result.score }}</div>
                 {% else %}
               <div class="col-2 fw-bolder">vs</div>
               {% endif %}
