--- a/players.html
+++ b/players.html
@@ -4,6 +4,29 @@ title: Players
 image: /assets/img/logo-2.png
 ---
 
+<div class="bg-light">
+  <div class="container-sm">
+    <div class="row row-cols-2 g-2">
+      {% assign roles = site.data.players | group_by: "role" %}
+      {% for role in roles %}
+      <h6 class="text-uppercase text-center">{{ role.name }}</h6>
+      {% for player in role.items %}
+      <div class="col">
+        <div class="card h-100 text-white bg-dark border-0 shadow-sm">
+          <img src="{% if player.pp %}{{ player.pp }}{% else %}{% '/assets/img/pp/blank-pp.png' | relative_url %}{% endif %}" alt="" class="card-img border-0">
+          <div class="card-img-overlay">
+            <h5 class="card-text fs-1">{{ player.no-punggung }}</h5>
+            <h6 class="card-text">{% if player.profile-link %}<a href="{{ player.profile-link }}" class="streched-link text-decoration-none">{{ player.name }}</a>{% endif %}</h6>
+          </div>
+        </div>
+      </div>
+      {% endfor %}
+      {% endfor %}
+    </div>
+  </div>
+</div>
+
+<!--
 <div class="container bg-light">
   <div class="row row-cols-2 row-cols-md-3 g-2">
   {% assign roles = site.data.players | group_by:"role" %}
@@ -29,3 +52,4 @@ image: /assets/img/logo-2.png
     {% endfor %}
   </div>
 </div>
+-->
