--- a/players.html
+++ b/players.html
@@ -14,7 +14,7 @@ image: /assets/img/logo-2.png
       <div class="col" style="height: 15rem;">
         <div class="card h-100 text-white border-0 shadow">
           <img src="{% if player.pp %}{{ player.pp }}{% else %}{{ '/assets/img/pp/blank-pp.png' | relative_url }}{% endif %}" alt="" class="card-img border-0">
-          <div class="card-body d-flex flex-column justify-content-between" style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.6));">
+          <div class="card-img-overlay d-flex flex-column justify-content-between" style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.6));">
             <h5 class="card-text fs-2 fw-bolder">{{ player.no-punggung }}</h5>
             <h6 class="card-text text-capitalize fs-4 fw-bolder">{% if player.profile-link %}<a href="{{ player.profile-link }}" class="stretched-link link-light text-decoration-none">{{ player.name }}</a>{% endif %}</h6>
           </div>
