--- a/players.html
+++ b/players.html
@@ -9,9 +9,9 @@ image: /assets/img/logo-2.png
     <div class="row row-cols-2 row-cols-md-3 g-3">
       {% assign roles = site.data.players | group_by: "role" %}
       {% for role in roles %}
-      <h6 class="d-block w-100 pt-5 text-uppercase text-center fw-bold">{{ role.name }}</h6>
+      <h1 class="d-block w-100 pt-5 text-uppercase text-center fw-bold">{{ role.name }}</h1>
       {% for player in role.items %}
-      <div class="col">
+      <div class="col" style="min-height: 18rem;">
         <div class="card h-100 text-white border-0 shadow">
           <img src="{% if player.pp %}{{ player.pp }}{% else %}{{ '/assets/img/pp/blank-pp.png' | relative_url }}{% endif %}" alt="" class="card-img img-fluid border-0">
           <div class="card-img-overlay d-flex flex-column justify-content-between" style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.6));">
