--- a/players.html
+++ b/players.html
@@ -11,12 +11,12 @@ image: /assets/img/logo-2.png
       {% for role in roles %}
       <h1 class="d-block w-100 pt-5 text-uppercase text-center fw-bold">{{ role.name }}</h1>
       {% for player in role.items %}
-      <div class="col" style="min-height: 18rem;">
+      <div class="col" style="min-height: 15rem;">
         <div class="card h-100 text-white border-0 shadow">
           <img src="{% if player.pp %}{{ player.pp }}{% else %}{{ '/assets/img/pp/blank-pp.png' | relative_url }}{% endif %}" alt="" class="card-img img-fluid border-0">
           <div class="card-img-overlay d-flex flex-column justify-content-between" style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.6));">
             <h5 class="card-text fs-2 fw-bolder">{% if player.profile-link %}<a href="{{ player.profile-link }}" class="stretched-link link-light text-decoration-none">{{ player.no-punggung }}</a>{% endif %}</h5>
-            <h6 class="card-text text-capitalize fs-4 fw-bolder"><small class="d-block text-uppercase fs-6 text-secondary">{{ player.role }}</small>{{ player.name }}</h6>
+            <h6 class="card-text text-capitalize fs-4 fw-bolder">{{ player.name }}</h6>
           </div>
         </div>
       </div>
