--- a/players.html
+++ b/players.html
@@ -9,10 +9,10 @@ image: /assets/img/logo-2.png
     <div class="row row-cols-2 row-cols-md-3 g-3">
       {% assign roles = site.data.players | group_by: "role" %}
       {% for role in roles %}
-      <h1 class="d-block w-100 pt-5 text-uppercase text-center fw-bold">{{ role.name }}</h1>
+      <h1 class="d-block w-100 pt-5 text-uppercase text-center fw-bold shadow-lg">{{ role.name }}</h1>
       {% for player in role.items %}
-      <div class="col" style="min-height: 15rem;">
-        <div class="card h-100 text-white border-0 shadow">
+      <div class="col" style="min-height: 16rem;">
+        <div class="card h-100 text-white border-0">
           <img src="{% if player.pp %}{{ player.pp }}{% else %}{{ '/assets/img/pp/blank-pp.png' | relative_url }}{% endif %}" alt="" class="card-img img-fluid border-0">
           <div class="card-img-overlay d-flex flex-column justify-content-between" style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.6));">
             <h5 class="card-text fs-2 fw-bolder">{% if player.profile-link %}<a href="{{ player.profile-link }}" class="stretched-link link-light text-decoration-none">{{ player.no-punggung }}</a>{% endif %}</h5>
