--- a/players.html
+++ b/players.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Players
-image: /assets/img/logo-2.png
+image: /assets/img/tesafc_full-team.jpg
 ---
 
 <div class="bg-light">
@@ -14,7 +14,7 @@ image: /assets/img/logo-2.png
       <div class="col" style="min-height: 16rem;">
         <div class="card h-100 text-white border-0">
           <img src="{% if player.pp %}{{ player.pp }}{% else %}{{ '/assets/img/pp/blank-pp.png' | relative_url }}{% endif %}" alt="" class="card-img img-fluid border-0">
-          <div class="card-img-overlay d-flex flex-column justify-content-between shadow-lg" style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.6));">
+          <div class="card-img-overlay d-flex flex-column justify-content-between" style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.6));">
             <h5 class="card-text fs-2 fw-bolder">{% if player.profile-link %}<a href="{{ player.profile-link }}" class="stretched-link link-light text-decoration-none">{{ player.no-punggung }}</a>{% endif %}</h5>
             <h6 class="card-text text-capitalize fs-4 fw-bolder">{{ player.name }}</h6>
           </div>
@@ -25,31 +25,3 @@ image: /assets/img/logo-2.png
     </div>
   </div>
 </div>
-
-<!--
-<div class="container bg-light">
-  <div class="row row-cols-2 row-cols-md-3 g-2">
-  {% assign roles = site.data.players | group_by:"role" %}
-    {% for role in roles %}
-    <h6 class="d-block w-100 pt-5 text-uppercase text-center fw-bold">{{ role.name }}</h1>
-    {% for player in role.items %}
-    <div class="col">
-      <div class="card rounded-0 border-0 h-100 shadow-sm">
-        {% if player.pp %}
-        <img src="{{ player.pp }}" class="rounded-0 border-0">
-          {% else %}
-          <img src="/assets/img/pp/default-pp.jpg" class="rounded-0 border-0">
-        {% endif %}
-        <div class="card-body">
-          <h5 class="card-title text-center text-capitalize">
-            {% if player.profile-link %}<a href="{{ player.profile-link }}" class="stretched-link link-dark text-decoration-none">{{ player.name }}</a>{% else %}{{ player.name }}{% endif %}
-          </h5>
-          <p class="card-text text-center fs-1 fw-bold">{{ player.no-punggung }}</p>
-        </div>
-      </div>
-    </div>
-    {% endfor %}
-    {% endfor %}
-  </div>
-</div>
--->
