--- a/matches.html
+++ b/matches.html
@@ -17,9 +17,11 @@ image: https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTY3CfEcpam9s-Avlbpc
           <div class="card-body py-3">
             <p class="card-text text-center fw-bolder mb-0"><small class="text-uppercase">{{ item.type }}</small> • <small class="text-uppercase">{{ item.competition }}</small></p>
             <p class="card-text text-center text-capitalize text-secondary"><small class="text-uppercase">{{ item.kickoff }}</small></p>
-            <div class="row row-cols-3 g-0 d-flex justify-content-evenly align-items-center text-center text-uppercase py-2">
-              <div class="col-5">
+            <div class="row row-cols-5 g-0 d-flex justify-content-evenly align-items-center text-center text-uppercase py-2">
+              <div class="col-3">
                 <small class="lh-1 text-end fw-bolder">{{ item.home.name }}</small>
+              </div>
+              <div class="col-2">
                 <img src="{% if item.home.logo %}{{ item.home.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="border-0" width="30" height="30">
               </div>
               {% if item.status == "last match" %}
@@ -27,8 +29,10 @@ image: https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTY3CfEcpam9s-Avlbpc
                 {% else %}
               <div class="col-2 fw-bolder">vs</div>
               {% endif %}
-              <div class="col-5">
+              <div class="col-2">
                 <img src="{% if item.away.logo %}{{ item.away.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="border-0" width="30" height="30">
+              </div>
+              <div class="col-3">
                 <small class="lh-1 text-start fw-bolder">{{ item.away.name }}</small>
               </div>
             </div>
