--- a/matches.html
+++ b/matches.html
@@ -17,7 +17,7 @@ image: https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTY3CfEcpam9s-Avlbpc
           <div class="card-body py-3">
             <p class="card-text text-center fw-bolder mb-0"><small class="text-uppercase">{{ item.type }}</small> • <small class="text-uppercase">{{ item.competition }}</small></p>
             <p class="card-text text-center text-capitalize text-secondary"><small class="text-uppercase">{{ item.kickoff }}</small></p>
-            <div class="row row-cols-5 g-0 d-flex justify-content-evenly align-items-center text-center text-uppercase py-2">
+            <div class="row row-cols-5 g-0 d-flex justify-content-around align-items-center text-center text-uppercase py-2">
               <div class="col-3">
                 <small class="lh-1 text-end fw-bolder">{{ item.home.name }}</small>
               </div>
