--- a/matches.html
+++ b/matches.html
@@ -19,7 +19,7 @@ image: https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTY3CfEcpam9s-Avlbpc
             <p class="card-text text-center text-capitalize text-secondary"><small class="text-uppercase">{{ item.kickoff }}</small></p>
             <div class="row row-cols-5 g-0 d-flex justify-content-around align-items-center text-center text-uppercase py-2">
               <div class="col-3">
-                <small class="lh-1 text-end fw-bolder">{{ item.home.name }}</small>
+                <small class="lh-1 float-end fw-bolder">{{ item.home.name }}</small>
               </div>
               <div class="col-2">
                 <img src="{% if item.home.logo %}{{ item.home.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="border-0" width="30" height="30">
@@ -33,7 +33,7 @@ image: https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTY3CfEcpam9s-Avlbpc
                 <img src="{% if item.away.logo %}{{ item.away.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="border-0" width="30" height="30">
               </div>
               <div class="col-3">
-                <small class="lh-1 text-start fw-bolder">{{ item.away.name }}</small>
+                <small class="lh-1 float-start fw-bolder">{{ item.away.name }}</small>
               </div>
             </div>
             <p class="card-text text-center text-capitalize">
