--- a/players.html
+++ b/players.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Players
-image: /assets/img/tesafc-full-team-2.jpg
+image: /assets/img/tesafc-full-team-3.png
 ---
 
 <div class="bg-light">
