--- a/players.html
+++ b/players.html
@@ -9,6 +9,33 @@ image: /assets/img/tesafc-full-team-3.png
     <div class="row row-cols-2 row-cols-md-4 g-2">
       {% assign roles = site.data.players | group_by: "role" %}
       {% for role in roles %}
+      <h6 class="d-block w-100 text-uppercase fw-bolder pt-5 mb-0">{{ role.name }}</h6>
+      {% for player in role.items %}
+      <div class="col">
+        <div class="card h-100 text-white border-0" style="min-height: 16rem; background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5);">
+          <div class="card-header border-0">
+            <h5 class="card-text text-uppercase fw-bolder">{{ player.no-punggung }}</h5>
+          </div>
+          <div class="card-body border-0">
+            <img src="{% if player.pp %}{{ player.pp }}{% else %}{{ '/assets/img/pp/blank-pp.png' | relative_url }}{% endif %}" alt="" class="card-img img-fluid border-0">
+          </div>
+          <div class="card-footer border-0">
+            <h6 class="card-text text-uppercase fw-bolder">{{ player.name }}</h6>
+          </div>
+        </div>
+      </div>
+      {% endfor %}
+      {% endfor %}
+    </div>
+  </div>
+</div>
+
+<!--
+<div class="bg-light">
+  <div class="container">
+    <div class="row row-cols-2 row-cols-md-4 g-2">
+      {% assign roles = site.data.players | group_by: "role" %}
+      {% for role in roles %}
       <h6 class="d-block w-100 text-uppercase fw-bold pt-5 mb-0">{{ role.name }}</h6>
       {% for player in role.items %}
       <div class="col" style="min-height: 16rem;">
@@ -25,3 +52,4 @@ image: /assets/img/tesafc-full-team-3.png
     </div>
   </div>
 </div>
+-->
