--- a/players.html
+++ b/players.html
@@ -12,12 +12,12 @@ image: /assets/img/tesafc-full-team-3.png
       <h6 class="d-block w-100 text-uppercase fw-bolder pt-5 mb-0">{{ role.name }}</h6>
       {% for player in role.items %}
       <div class="col">
-        <div class="card h-100 text-white border-0" style="min-height: 16rem; background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5);">
+        <div class="card h-100 text-white bg-transparent border-0" style="min-height: 16rem; background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5);">
           <div class="card-header border-0">
             <h5 class="card-text text-uppercase fw-bolder">{{ player.no-punggung }}</h5>
           </div>
           <div class="card-body border-0">
-            <img src="{% if player.pp %}{{ player.pp }}{% else %}{{ '/assets/img/pp/blank-pp.png' | relative_url }}{% endif %}" alt="" class="card-img img-fluid border-0">
+            <img src="{% if player.pp %}{{ player.pp }}{% else %}{{ '/assets/img/pp/blank-pp.png' | relative_url }}{% endif %}" alt="" class="card-img border-0">
           </div>
           <div class="card-footer border-0">
             <h6 class="card-text text-uppercase fw-bolder">{{ player.name }}</h6>
