--- a/players.html
+++ b/players.html
@@ -17,7 +17,7 @@ image: /assets/img/tesafc-full-team-3.png
             <h5 class="card-text text-uppercase fw-bolder">{{ player.no-punggung }}</h5>
           </div>
           <div class="card-body bg-transparent p-0 m-0 border-0">
-            <img src="{% if player.pp %}{{ player.pp }}{% else %}{{ '/assets/img/pp/blank-pp.png' | relative_url }}{% endif %}" alt="" class="card-img border-0">
+            <img src="{% if player.pp %}{{ player.pp }}{% else %}{{ '/assets/img/pp/blank-pp.png' | relative_url }}{% endif %}" alt="" class="card-img bg-transparent border-0">
           </div>
           <div class="card-footer border-0">
             <h6 class="card-text text-uppercase fw-bolder">{{ player.name }}</h6>
