--- a/players.html
+++ b/players.html
@@ -16,7 +16,7 @@ image: /assets/img/tesafc-full-team-3.png
           <div class="card-header border-0">
             <h5 class="card-text text-uppercase fw-bolder">{{ player.no-punggung }}</h5>
           </div>
-          <div class="card-body bg-transparent p-0 m-0 border-0">
+          <div class="card-body card-img-overlay bg-transparent p-0 m-0 border-0">
             <img src="{% if player.pp %}{{ player.pp }}{% else %}{{ '/assets/img/pp/blank-pp.png' | relative_url }}{% endif %}" alt="" class="card-img bg-transparent border-0">
           </div>
           <div class="card-footer border-0">
