--- a/players.html
+++ b/players.html
@@ -43,8 +43,8 @@ image: /assets/img/tesafc-full-team-3.png
         <div class="card h-100 text-white border-0">
           <img src="{% if player.pp %}{{ player.pp }}{% else %}{{ '/assets/img/pp/blank-pp.png' | relative_url }}{% endif %}" alt="" class="card-img img-fluid border-0">
           <div class="card-img-overlay d-flex flex-column justify-content-between p-0 m-0" style="background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5));">
-            <h5 class="card-text fs-2 fw-bolder">{% if player.profile-link %}<a href="{{ player.profile-link }}" class="stretched-link link-light text-decoration-none">{{ player.no-punggung }}</a>{% endif %}</h5>
-            <h6 class="card-text text-capitalize fs-5 fw-bolder">{{ player.name }}</h6>
+            <h5 class="card-text fs-2 fw-bolder p-3">{% if player.profile-link %}<a href="{{ player.profile-link }}" class="stretched-link link-light text-decoration-none">{{ player.no-punggung }}</a>{% endif %}</h5>
+            <h6 class="card-text text-capitalize fs-5 fw-bolder p-3">{{ player.name }}</h6>
           </div>
         </div>
       </div>
