--- a/players.html
+++ b/players.html
@@ -4,34 +4,6 @@ title: Players
 image: /assets/img/tesafc-full-team-3.png
 ---
 
-<!--
-<div class="bg-light">
-  <div class="container">
-    <div class="row row-cols-2 row-cols-md-4 g-2">
-      {% assign roles = site.data.players | group_by: "role" %}
-      {% for role in roles %}
-      <h6 class="d-block w-100 text-uppercase fw-bolder pt-5 mb-0">{{ role.name }}</h6>
-      {% for player in role.items %}
-      <div class="col">
-        <div class="card card-img-overlay h-100 text-white bg-transparent border-0" style="min-height: 16rem; background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5);">
-          <div class="card-header border-0">
-            <h5 class="card-text text-uppercase fw-bolder">{{ player.no-punggung }}</h5>
-          </div>
-          <div class="card-body bg-transparent p-0 m-0 border-0">
-            <img src="{% if player.pp %}{{ player.pp }}{% else %}{{ '/assets/img/pp/blank-pp.png' | relative_url }}{% endif %}" alt="" class="card-img bg-transparent border-0">
-          </div>
-          <div class="card-footer border-0">
-            <h6 class="card-text text-uppercase fw-bolder">{{ player.name }}</h6>
-          </div>
-        </div>
-      </div>
-      {% endfor %}
-      {% endfor %}
-    </div>
-  </div>
-</div>
--->
-
 <div class="bg-light">
   <div class="container">
     <div class="row row-cols-2 row-cols-md-4 g-2">
@@ -42,9 +14,9 @@ image: /assets/img/tesafc-full-team-3.png
       <div class="col" style="min-height: 16rem;">
         <div class="card h-100 text-white border-0">
           <img src="{% if player.pp %}{{ player.pp }}{% else %}{{ '/assets/img/pp/blank-pp.png' | relative_url }}{% endif %}" alt="" class="card-img border-0 py-2">
-          <div class="card-img-overlay d-flex flex-column justify-content-between p-0 m-0" style="background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5));">
+          <div class="card-img-overlay d-flex flex-column justify-content-between p-0 m-0" style="background-image: linear-gradient(to top right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.1));">
             <h5 class="card-text fs-2 fw-bolder p-3">{% if player.profile-link %}<a href="{{ player.profile-link }}" class="stretched-link link-light text-decoration-none">{{ player.no-punggung }}</a>{% endif %}</h5>
-            <h6 class="card-text text-capitalize fs-5 fw-bolder p-3">{{ player.name }}</h6>
+            <h6 class="card-text text-capitalize fs-4 fw-bolder p-3">{{ player.name }}</h6>
           </div>
         </div>
       </div>
