--- a/players.html
+++ b/players.html
@@ -4,7 +4,7 @@ title: Players
 image: /assets/img/tesafc-full-team-3.png
 ---
 
-<div class="bg-light">
+<div class="text-white bg-dark" style="background-image: linear-gradient(to top right, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.5));">
   <div class="container">
     <div class="row row-cols-2 row-cols-md-4 g-2">
       {% assign roles = site.data.players | group_by: "role" %}
