--- a/matches.html
+++ b/matches.html
@@ -5,12 +5,12 @@ title: matches
 dis-image: https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTY3CfEcpam9s-AvlbpcgLaeEk3WHumXwQ-sA&usqp=CAU
 ---
 
-<div class="bg-light">
+<div class="text-white bg-dark py-5" style="background-image: linear-gradient(to bottom right, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.5));">
   <div class="container-sm px-0">
     {% assign matches = site.matches | group_by: "status" %}
     <div class="row row-cols-1 g-2">
       {% for match in matches reversed %}
-      <h6 class="d-block w-100 pt-5 mb-0 text-uppercase text-center fw-bold">{{ match.name }}</h6>
+      <h6 class="d-block w-100 mb-0 text-uppercase text-center fw-bold">{{ match.name }}</h6>
       {% for item in match.items reversed %}
       <div class="col">
         <div class="card rounded-0 border-0 shadow-sm mb-2">
