--- a/news.html
+++ b/news.html
@@ -15,8 +15,8 @@ image:
           <img src="{{ post.image }}" alt="" class="card-img-top">
           {% endif %}
           <div class="card-body">
-            <h5 class="card-title text-capitalize"><a href="{{ post.url }}" class="link-dark stretched-link">{{ post.title }}</a></h5>
-            <p class="card-text text-secondary">{{ post.date }}</p>
+            <h5 class="card-title text-capitalize"><a href="{{ post.url }}" class="link-dark stretched-link text-decoration-none">{{ post.title }}</a></h5>
+            <small class="card-text text-secondary pt-3">{{ post.date | date_to_long_string }}</small>
           </div>
         </div>
       </div>
