--- a/news.html
+++ b/news.html
@@ -10,7 +10,7 @@ image:
     <div class="row row-cols-1 row-cols-md-3 g-2">
       {% for post in site.posts %}
       <div class="col">
-        <div class="card border-0 rounded-0 shadow-sm">
+        <div class="card h-100 border-0 rounded-0 shadow-sm">
           {% if post.image %}
           <img src="{{ post.image }}" alt="" class="card-img-top">
           {% endif %}
