--- a/news.html
+++ b/news.html
@@ -7,7 +7,7 @@ image:
 
 <div class="bg-light py-5">
   <div class="container-sm">
-    <h6 class="text-uppercase fw-bolder">all news</h6>
+    <h6 class="text-uppercase fw-bolder mb-0">all news</h6>
     <div class="row row-cols-1 row-cols-md-3 g-3">
       {% for post in site.posts %}
       <div class="col">
