--- a/news.html
+++ b/news.html
@@ -5,7 +5,7 @@ description:
 image:
 ---
 
-<div class="bg-light py-5">
+<div class="bg-light pt-5">
   <div class="container-sm">
     <h6 class="text-uppercase fw-bolder mb-3">all news</h6>
     <div class="row row-cols-1 row-cols-md-3 g-3">
