Update and rename assets.md to assets.html

--- a/assets.html
+++ b/assets.html
@@ -42,7 +42,7 @@ description:
 </div>
 
 <h2 class="border-bottom pt-5 pb-1">Photos</h2>
-<div class="row row-cols-1 row-cols-md-2 g-3">
+<div class="row row-cols-2 g-3">
   {% assign photos = site.data.assets.photos | group_by: "name" %}
   {% for type in photos %}
   <h6 class="d-block w-100 text-uppercase mb-0 pt-3">{{ type.name }}</h6>
