--- a/contact.html
+++ b/contact.html
@@ -29,10 +29,10 @@ contact:
   <div class="col">
     <div class="card">
       <div class="card-body p-1">
-        <i class="{{ contact.icon }} d-block fs-3 text-center"></i>
+        <i class="{{ contact.icon }} d-block fs-1 text-center"></i>
       </div>
-      <div class="card-footer p-1">
-        <small class="card-text text-center text-capitalize">{{ contact.name }}</small>
+      <div class="card-footer p-0">
+        <small class="text-center text-capitalize">{{ contact.name }}</small>
       </div>
     </div>
   </div>
