--- a/contact.html
+++ b/contact.html
@@ -29,10 +29,10 @@ contact:
   <div class="col">
     <div class="card">
       <div class="card-body p-1">
-        <i class="{{ contact.icon }} d-block fs-1 text-center"></i>
+        <span class="d-block fs-1 text-center"><i class="{{ contact.icon }}"></i></span>
       </div>
       <div class="card-footer p-0">
-        <small class="text-center text-capitalize">{{ contact.name }}</small>
+        <small class="d-block text-center text-capitalize">{{ contact.name }}</small>
       </div>
     </div>
   </div>
