--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@ contact:
   <div class="col">
     <div class="card">
       <div class="card-body p-1">
-        <span class="d-block fs-1 text-center"><i class="{{ contact.icon }}"></i></span>
+        <span class="d-block text-center" style="font-size: 6em;"><i class="{{ contact.icon }}"></i></span>
       </div>
       <div class="card-footer p-0">
         <small class="d-block text-center text-capitalize">{{ contact.name }}</small>
