--- a/contact.html
+++ b/contact.html
@@ -9,15 +9,15 @@ contact:
     icon: fa-brands fa-whatsapp
   - type: whatsapp
     name: angga
-    url: +6281296827422
+    url: +62 899-6278-710
     icon: fa-brands fa-whatsapp
   - type: whatsapp
     name: ropick
-    url: +6281296827422
+    url: +62 895-3468-83550
     icon: fa-brands fa-whatsapp
   - type: whatsapp
     name: habiel
-    url: +6281296827422
+    url: +62 858-6126-9014
     icon: fa-brands fa-whatsapp
 ---
 
@@ -29,7 +29,7 @@ contact:
   <div class="col">
     <div class="card">
       <div class="card-body p-1">
-        <a href="https://wa.me/{{ contact.url }}" class="d-block text-center stretched-link link-success text-decoration-none" style="font-size: 5em;"><i class="{{ contact.icon }}"></i></a>
+        <a href="https://wa.me/{{ contact.url }}" class="d-block text-center stretched-link link-success text-decoration-none lh-1 p-0" style="font-size: 5em;"><i class="{{ contact.icon }}"></i></a>
       </div>
       <div class="card-footer bg-white p-0">
         <small class="d-block text-center text-capitalize">{{ contact.name }}</small>
