--- a/contact.html
+++ b/contact.html
@@ -29,10 +29,10 @@ contact:
   <div class="col">
     <div class="card">
       <div class="card-body p-1">
-        <a href="{{ contact.url }}" class="d-block text-center stretched-link link-success text-decoration-none lh-1 p-0" style="font-size: 5em;"><i class="{{ contact.icon }}"></i></a>
+        <a href="{{ contact.url }}" class="d-block text-center stretched-link link-dark text-decoration-none lh-1 p-0" style="font-size: 5em;"><i class="{{ contact.icon }}"></i></a>
       </div>
       <div class="card-footer bg-white p-1">
-        <small class="d-block text-center">{{ contact.name }}</small>
+        <small class="d-block text-center lh-1">{{ contact.name }}</small>
       </div>
     </div>
   </div>
