--- a/assets.html
+++ b/assets.html
@@ -40,6 +40,7 @@ description:
   {% endfor %}
   {% endfor %}
 </div>
+<a href="/assets/img/logo/logo-v2.zip" role="button" alt="" class="btn btn-outline-primary">Download logo.zip</p>
 
 <h2 class="border-bottom pt-5 pb-1">Photos</h2>
 <div class="row row-cols-2 g-2">
